--- a/core/server/master/pom.xml
+++ b/core/server/master/pom.xml
@@ -89,7 +89,6 @@
       <artifactId>jersey-server</artifactId>
     </dependency>
 
-
     <!-- Internal dependencies -->
     <dependency>
       <groupId>org.alluxio</groupId>
@@ -104,6 +103,11 @@
     <dependency>
       <groupId>org.alluxio</groupId>
       <artifactId>alluxio-core-client-fs</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.alluxio</groupId>
+      <artifactId>alluxio-core-client-hdfs</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
