--- a/core/server/common/pom.xml
+++ b/core/server/common/pom.xml
@@ -121,7 +121,7 @@
     </dependency>
   </dependencies>
 
-  <!--<build>
+  <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -145,6 +145,6 @@
         </executions>
       </plugin>
     </plugins>
-  </build>-->
+  </build>
 
 </project>
